refactor config package for better default value handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
         "gopls": {
-                "build.buildFlags": ["-tags=xuandb_editor"]
+                "build.buildFlags": []
         },
         "makefile.configureOnOpen": false
 }
